more alignment stuff, teams section is a major issue

--- a/source/stylesheets/seg_special.css
+++ b/source/stylesheets/seg_special.css
@@ -11,6 +11,12 @@ html, body {
    margin-right: auto;
    max-width: initial;
 }
+.teamWidth{
+   width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   max-width: initial;
+}
 .text{
   margin-top:5%;
   font-family: 'Source Sans Pro', sans-serif;
@@ -446,6 +452,7 @@ height: 320px;
 .team_row{
   height:260px;
   width:207%;
+  opacity: .99;
 }
 .vam_logo{
   margin-left: 130px;
@@ -491,6 +498,10 @@ text-align: left;
   font-weight: 300;
   line-height:18px;
 }*/
+.iframeMods{
+  margin-left:3%;
+  margin-top:20px;
+}
 
 .vam-text{
   float: right;
